kubernetes/homarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homarr
spec:
  type: NodePort
  selector:
    app: homarr
  ports:
    - port: 7575
      targetPort: 7575
      nodePort: 32082
